--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="new_request">New Request</string>
     <string name="feedback_list">Feedback List</string>
     <string name="topic">Topic</string>
+    <string name="request_feedback">Request Feedback</string>
 </resources>
