sign in not working

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">CFS</string>
     <string name="login">Login</string>
-    <string name="user_name">Username</string>
+    <string name="user_mail">Mail</string>
     <string name="password">Password</string>
     <string name="new_request">New Request</string>
     <string name="feedback_list">Feedback List</string>
